Fix table backgrounds overflowing rounded corners

--- a/assets/stylesheet/tables.css
+++ b/assets/stylesheet/tables.css
@@ -12,6 +12,7 @@ table {
     box-shadow: 3px 3px 5px black;
     border-radius: var(--border-radius);
     border-collapse: separate;
+    overflow: hidden;
 }
 
 td {
